--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "fb6e471a-d6d7-4ae9-85c0-4da081c1e844"
   }
 }
