changes from vm

--- a/nx.json
+++ b/nx.json
@@ -30,7 +30,7 @@
     }
   },
   "workspaceLayout": {
-    "appsDir": "projects",
-    "libsDir": "projects"
+    "appsDir": "app",
+    "libsDir": "libs"
   }
 }
