--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@nrwl/angular": "14.6.4",
-    "angular-moment": "^1.3.0",
     "angular-svg-icon": "^14.0.0",
+    "date-fns": "^2.29.3",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
